option java_outer_classname="DisposeReaderCommandProtocol";
package Alachisoft.NosDB.Common.Protobuf;
option java_package = "com.alachisoft.nosdb.common.protobuf";

message DisposeReaderCommand 
{	
	optional string readerUID = 1;
}